[package]
name = "u-siem-kernel"
version = "0.0.8"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Library to be used to build a custom SIEM with the framework uSIEM"
repository = "https://github.com/u-siem/usiem-kernel"
keywords = ["SIEM", "security", "logs"]
categories = ["security"]
edition = "2018"

[lib]
name = "usiem_kernel"
path = "src/lib.rs"

[features]
default = ["metrics"]
metrics = []

[dependencies]
u-siem = { version = "0.0" }
lazy_static = "1.4"